--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,30 @@
-[tool.poetry]
+[project]
 name = "trade-optimisation-data-viewer"
 version = "0.1.0"
-description = ""
-authors = ["Josh Kirk <59419126+this-josh@users.noreply.github.com>"]
-license = "MIT"
+description = "Add your description here"
+authors = [
+    { name = "Josh Kirk", email = "59419126+this-josh@users.noreply.github.com" }
+]
+dependencies = [
+    "streamlit>=1.42.0",
+    "dill>=0.3.9",
+    "numpy>=2.2.3",
+    "watchdog>=6.0.0",
+    "plotly==5.22.0",
+]
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-streamlit = "^1.35.0"
-dill = "^0.3.8"
-numpy = "^1"
-watchdog = "^4.0.1"
-plotly = "^5.22.0"
-
+requires-python = ">= 3.8"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = []
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/trade_optimisation_data_viewer"]
