--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,14 @@ authors = [
     { name = "Josh Kirk", email = "59419126+this-josh@users.noreply.github.com" }
 ]
 dependencies = [
-    "streamlit>=1.42.0",
-    "dill>=0.3.9",
-    "numpy>=2.2.3",
-    "watchdog>=6.0.0",
+    "streamlit==1.42.0",
+    "dill==0.3.9",
+    "numpy==2.2.3",
+    "watchdog==6.0.0",
     "plotly==5.22.0",
 ]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = "== 3.12.3"
 
 [build-system]
 requires = ["hatchling"]
